--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -3,9 +3,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-
 }
 .pic-card {
   width: 48%;
+}
 
+.fix {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
