--- a/components/joy-swiper/joy-swiper.wxml
+++ b/components/joy-swiper/joy-swiper.wxml
@@ -5,7 +5,7 @@ circular
 >
 	<block wx:for="{{banners}}" wx:key="index">
 		<swiper-item>
-      <image src="{{item.image}}" mode="widthFix"></image>
+      <image src="{{item.image}}" mode="widthFix" class="swiper-img"></image>
     </swiper-item>
 	</block>
 </swiper>
