--- a/components/joy-swiper/joy-swiper.wxml
+++ b/components/joy-swiper/joy-swiper.wxml
@@ -1,11 +1,11 @@
-<swiper class="swiper" indicator-dots 
+<swiper class="swiper-class" indicator-dots 
 indicator-active-color="#ed6379"
 autoplay
 circular
 >
 	<block wx:for="{{banners}}" wx:key="index">
 		<swiper-item>
-      <image src="{{item.image}}" mode="widthFix" class="swiper-img"></image>
+      <image src="{{item.image||item}}" mode="widthFix" class="swiper-img"></image>
     </swiper-item>
 	</block>
 </swiper>
