--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -1,2 +1,5 @@
 <!--pages/category/category.wxml-->
-<text>pages/category/category.wxml</text>
+<view class="category">
+  <left-tab-bar categoryList="{{categoryList}}" bind:itemClick="handleItemClick" currentIndex="{{currentIndex}}"/>
+  <sub-category subCategory="{{categoryList[currentIndex].subCategory}}"/>
+</view>
