--- a/components/pic-card/pic-card.wxss
+++ b/components/pic-card/pic-card.wxss
@@ -1,28 +1,34 @@
 /* components/pic-card/pic-card.wxss */
-.goods-item {
+.pic-card{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.pic-card .goods-item {
   margin-top: 20rpx;
   text-align: center;
+  width: 48%;
 }
 
 .goods-item .img {
   width: 100%;
   border-radius: 8rpx;
-
 }
 
-.title {
+.goods-item .title {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 30rpx;
 }
 
-.price {
+.goods-item .price {
   font-size: 30rpx;
   color: #ed6379;
 }
 
-.favorites {
+.goods-item .favorites {
   font-size: 30rpx;
   margin-left: 10rpx;
 }
