--- a/pages/detail/components/comment-info/comment-info.wxml
+++ b/pages/detail/components/comment-info/comment-info.wxml
@@ -1,4 +1,3 @@
-<!--pages/detail/components/comment-info/comment-info.wxml-->
 <view class="wrapper">
   <view class="comment-title">
     <view>用户评价</view>
@@ -10,7 +9,7 @@
       <text class="user-name">{{commentInfo.user.uname}}</text>
     </view>
     <view>
-      <view class="comment-content">{{commentInfo.content}}</view>
+      <view class="comment-content">{{(commentInfo.content)}}</view>
       <view class="goods-info">
         <view style="margin-right:10rpx">{{commentInfo.created}}</view>
         <view>{{commentInfo.style}}</view>
