--- a/pages/detail/components/detail-info/detail-info.wxss
+++ b/pages/detail/components/detail-info/detail-info.wxss
@@ -1,20 +1,25 @@
-.end {
-  float: right;
+.goods-desc {
+  padding: 0rpx 38rpx;
 }
-.start ,.end{
+.goods-desc > .start , .end{
   width: 180rpx;
   height: 2rpx;
   background-color: #333;
   position: relative;
 }
+
+.end {
+  float: right;
+}
+
 .start::before{
   content: "";
   width: 10rpx;
   height: 10rpx;
   background-color: #333;
   position: absolute;
-
 }
+
 .end::after{
   content: "";
   width: 10rpx;
@@ -24,25 +29,24 @@
   bottom: 0;
   right: 0;
 }
-.goods-desc {
-  padding: 0rpx 38rpx;
-}
-.desc {
+
+.goods-desc .desc {
   color: #666;
   font-size: 32rpx;
   margin: 20rpx 0;
-}
-.item-image {
-  width: 100%;
-}
-
-.images-desc {
-  color: #666;
-  font-size: 36rpx;
-  margin: 32rpx 32rpx;
 }
 
 .goods-images {
   border-bottom: 12rpx solid #eee;
   margin-top: 24rpx;
+}
+
+.goods-images .item-image {
+  width: 100%;
+}
+
+.goods-images .images-desc {
+  color: #666;
+  font-size: 36rpx;
+  margin: 32rpx 32rpx;
 }
